Step #2: Setting up the TDD environment